@startuml Mood Tracker App ERD

' Zero or One  = |o--
' Exactly One  = ||--
' Zero or Many = }o--
' One or Many  = }|--

package "ASP.NET provided tables" <<Rectangle>> {
  entity AspNetUsers {
    * Id: TEXT <<generated>>
    --
    * Email: TEXT
    * PasswordHash: TEXT
    ...
  }

  entity AspNetRoles {
    * Id: TEXT <<generated>>
    --
    ...
  }

  entity AspNetUserRoles {
    * UserId & RoleId <<composite primary key>>
    --
    * UserId: TEXT <<foreign key>>
    * RoleId: TEXT <<foreign key>>
  }
  ' TODO:
  ' entity AspNetUserClaims {
  '   * Id: TEXT <<generated>>
  '   --
  '   ...
  ' }
  ' entity AspNetRoleClaims {
  '   * Id: INTEGER <<generated>>
  '   --
  '   ...
  ' }
}

entity Moods {
  * Id: INTEGER <<generated>>
  --
  * Name: VARCHAR(1024)
  * Description: VARCHAR(2048)
}

entity MoodEntries {
  * Id: INTEGER <<generated>>
  --
  * UserId: TEXT <<foreign key>>
  * Time: DATETIME
  * Scale: TINYINT (-5 to 5, where 0 is true neutral mood)
  Notes: VARCHAR(1024)
}

entity MoodLookup {
  * MoodEntryId & MoodId <<composite primary key>>
  --
  * MoodEntryId: TEXT <<foreign key>>
  * MoodId: TEXT <<foreign key>>
}

AspNetUsers ||--o{ MoodEntries
AspNetUsers ||--o{ AspNetUserRoles

AspNetUserRoles }o--|| AspNetRoles

Moods ||--o{ MoodLookup
MoodEntries ||--|{ MoodLookup

@enduml